common/loginpage/src/css/styles.less
/* ... */
.tool-icon {
    width: 24px;
    height: 24px;

    .theme-type-dark & {
        background-position-x: 24px;
    }
}

.tool-icon__20 {
    .theme-type-dark & {
        background-position-x: 20px;
    }
}

.sidebar-block-title {
  display: flex;
  justify-content: space-between;
  margin-bottom: 15px;
  padding: 0 10px;
  font-size: 15px;
    color: @text-normal;
}

.sidebar-block-content {
  overflow-y: auto;
  overflow-x: hidden;
}

.menu-bottom-block {
  padding: 0;
  opacity: 75%;

  &:hover {
    opacity: 100%;
  }
}

.file-list-title {
  text-align: left;
  padding-left: 16px;
  padding-right: 56px;
  margin-bottom: 26px;
  .rtl & {
    text-align: right;
    padding-left: 56px;
    padding-right: 16px;
  }

  h3 {
    margin: 0;
    font-size: 20px;
    line-height: 28px;
    font-weight: 700;
  }
}

.file-list-head, .file-list-body .row {
  display: grid;
  gap: 8px;
  grid-template-columns: minmax(160px, 264px) minmax(140px, 248px) minmax(100px, 156px);
  align-items: center;
  justify-content: space-between;
  padding-left: 16px;
  padding-right: 56px;
  .rtl & {
    padding-left: 56px;
    padding-right: 16px;
  }

  @media (max-width: 1054px) {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

.file-list-head {
  margin-bottom: 4px;
  font-weight: 600;

  .col-name, .col-location {
    text-align: left;

    .rtl & {
      text-align: right;
    }
  }

  .col-date {
    text-align: right;

    .rtl & {
      text-align: left;
    }
  }
}

.file-list-body {
  display: flex;
  flex-direction: column;
  gap: @layout-list-items-gap;
  overflow-y: auto;

  .row {
    position: relative;
    border-radius: @border-radius-list-files-item;
    padding-top: 8px;
    padding-bottom: 8px;

    .col-name, .col-date {
      display: flex;
      align-items: center;
      gap: 8px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    .col-name {
      height: 32px;

      .icon {
        width: 32px;
        height: 32px;
      }

      .name {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        margin-left: 8px;
      }

      .ext {
        color: @text-secondary;
      }
    }

    .col-location {
      height: 24px;
      text-align: left;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      .rtl & {
        text-align: right;
      }
    }

    .col-date {
      height: 24px;
      justify-content: flex-end;
    }

    .col-more {
      position: absolute;
      top: 0;
      bottom: 0;
      right: 16px;
      opacity: 0;
      display: flex;
      align-items: center;

      button {
        color: @icon-normal;
        width: 24px;
        height: 24px;
        padding: 0;
        border-radius: 2px;
        background: transparent;
        align-items: center;

        &:active {
          background: color-mix(in srgb, @icon-normal, 15%, transparent); // 555F65 15%
          color: @icon-normal;
        }

        .icon {
          opacity: 0.5;

          &:hover {
            opacity: 1;
          }

          fill: @background-icon-normal;
          stroke: @icon-normal;
        }
      }

      .rtl & {
        right: 0;
        left: 16px;
      }
    }

    &:nth-child(even) {
      background-color: @background-normal-element-light;
    }

    &:hover:not(.unavail) {
      .col-more {
        opacity: 1;
      }
    }

    &:hover {
      background-color: @highlight-button-hover;
    }

    &:active, &[data-active] {
      background-color: @highlight-button-pressed;
    }
  }
}

.action-panel {
  display: none;
  height: 100%;
  padding: 40px;
  background-color: @background-action-panel;
  color: @text-normal;

  > label {
    position: absolute;
    top: 50%;
  }

  &.style--free {
    padding: 0;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
  }

  &.settings {
    overflow-x: hidden;
    min-width: 450px;
  }

  &.about {
    overflow-x: scroll;
    min-width: 450px;
  }

  &.recents {
    padding: 40px 0;
  }

  &.templates {
    /*        padding: 20px;*/
  }

  // Folders
  &.open {
    .file-list-body .row {
      justify-content: normal;
      gap: clamp(10px, 6vw, 104px);
      > div {
            min-width: 30px; 
        }
    }

    .file-list-title {
      margin-bottom: 0;
    }

    #box-open-acts {
        text-align: left;
        padding: 16px;
        /*#btn-openlocal {*/
            /*border-radius: 4px;*/
            /*background: @background-accent-button;*/
        /*} */
    }

    #area-dnd-file {
      margin-block: 24px;
    }
  }

}

.connect {
  center {
    padding: 70px 20px;
  }

  #btn-connect {
    margin-top: 50px;
  }

  button {
    &[data-cprov] {
      width: 160px;
      margin: 0 20px 20px 0;
      color: @text-normal;

      img.icon {
        height: 100%;
        width: auto;
      }
    }
  }

  #box-providers-premium-button {
    > button {
      width: 340px;
    }
  }

  .theme-type-dark & {
    .icon__light {
      display: none;
    }
  }

  .theme-type-light & {
    .icon__dark {
      display: none;
    }
  }
}

.text-welcome {
  font-weight: 100;
}

.text-description {
  font-size: 15px;
  font-weight: normal;
}

.flexbox {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.flex-fill {
  flex-grow: 1;
}

.flex-item {
  overflow: hidden;
}

.recent-panel-container {
  display: grid;
  grid-auto-rows: max-content;
  gap: 40px;
  position: relative;
  height: 100%;
  padding-inline: 32px;
  max-width: 1680px;
  margin-inline: auto;
  margin-bottom: -40px;
  overflow: hidden;
  color: @text-normal;

  .search-bar {
    h1 {
      margin: 0;
    }
  }

  .files {
    display: flex;
    flex-direction: column;
    gap: 40px;
  }
}

.open-panel-container {
  .recent-panel-container();
   display: flex;
   flex-direction: column;
   padding: initial;
   overflow-y: auto;
   gap: 8px;
    .file-list-body {
      overflow-x: hidden;
    }
}
/* ... */

